--- a/.github/workflows/breaking.yaml
+++ b/.github/workflows/breaking.yaml
@@ -28,6 +28,8 @@ jobs:
       - name: Setup Buf
         if: steps.proto-head.outcome == 'success' && steps.proto-main.outcome == 'success'
         uses: bufbuild/buf-setup-action@v1
+        with:
+          github_token: ${{ github.token }}
       - name: Check breaking changes
         if: steps.proto-head.outcome == 'success' && steps.proto-main.outcome == 'success'
         uses: bufbuild/buf-breaking-action@v1
