--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,6 +28,8 @@ jobs:
       - name: Setup Buf
         if: steps.proto.outcome == 'success'
         uses: bufbuild/buf-setup-action@v1
+        with:
+          github_token: ${{ github.token }}
       - name: Lint
         if: steps.proto.outcome == 'success'
         uses: bufbuild/buf-lint-action@v1
